# bican-mccarroll-manuscript1

./: .gitignore  Dockerfile  README.md  test_eqtl_pipeline.R  test_eqtl_pipeline.py
.github/workflow-templates/: R-package.properties.json  R-package.yml  python-package.properties.json  python-package.yml  roxygen.properties.json  roxygen.yml
.github/workflows/: R-bican.mccarroll.differentialexpression.yml  R-celltypeproportions.yml  R-helloworld.yml  R-reusable.yml  R-utils.yml  docker.yml  python-frob.yml  python-helloworld.yml  python-reusable.yml  roxygen-bican.mccarroll.differentialexpression.yml  roxygen-celltypeproportions.yml  roxygen-helloworld.yaml  roxygen-helloworld.yml  roxygen-reusable.yml  roxygen-utils.yml
R/: README.md
R/bican.mccarroll.celltypeproportions/: DESCRIPTION  README.md
R/bican.mccarroll.celltypeproportions/R/: cell_type_ratios.R  compute_ctp.R  ctp_correlations.R  fit_beta_binomial_glm.R  fit_beta_binomial_glmm.R  identify_ctp_outliers.R  plot_ctp_correlations.R  predictions_from_beta_binomial_glmm.R  variance_partition.R
R/bican.mccarroll.celltypeproportions/man/: arcsin_sqrt_transform_ctp.Rd  compute_ctp.Rd  (+56 more)
R/bican.mccarroll.de.analysis/: DESCRIPTION  LICENSE  NAMESPACE
R/bican.mccarroll.differentialexpression/: DESCRIPTION  NAMESPACE
R/bican.mccarroll.eqtl/: DESCRIPTION  NAMESPACE  README.md
R/bican.mccarroll.figures/: DESCRIPTION  NAMESPACE
R/bican.mccarroll.helloworld/: DESCRIPTION  NAMESPACE  README.md
R/bican.mccarroll.trade/: DESCRIPTION  NAMESPACE
R/bican.mccarroll.utils/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/tools/: install_all_packages.R  install_packages.R
bican.mccarroll.utils/: .Rbuildignore
bican.mccarroll.utils/R/: color_palette_accessors.R
bican.mccarroll.utils/data-raw/: hbma_cluster_annotation_term.csv
bican.mccarroll.utils/man/: hbma_cell_type_color_scale.Rd
doc/: README.md
docker/: install.sh  install_dependencies_apt.sh  install_dependencies_r.sh  install_python.sh  install_r.sh
python/: README.md
python/bican_mccarroll_eqtl/: README.md  pyproject.toml
python/bican_mccarroll_eqtl/scripts/: run_kmeans_heatmap.py  test_eqtl_pipeline.py  test_eqtl_pipeline_0308.py
python/bican_mccarroll_eqtl/src/bican_mccarroll_eqtl/: __init__.py  gene_expression_ordering.py  kmeans_heatmap.py
python/bican_mccarroll_eqtl/src/bican_mccarroll_eqtl/cli/: test_eqtl_pipeline.py
python/bican_mccarroll_eqtl/src/cli/: test_eqtl_pipeline.py
python/bican_mccarroll_helloworld/: README.md  pyproject.toml
python/bican_mccarroll_helloworld/src/bican_mccarroll_helloworld/: hello.py  reverseComplementAlternateCase.py
python/bican_mccarroll_helloworld/tests/: test_hello.py  test_reverseComplementAlternateCase.py
(+327 files in other folders)
